--- a/templates/index.html
+++ b/templates/index.html
@@ -58,10 +58,13 @@
           </select>
         </div>
         <div class="col-md-3" style="padding-right: 20px">
-          <h3>How to Use</h3>
-          <h3>Define variables in bar chart</h3>
-          <h3>Created by</h3>
-          <h3>Metadata</h3>
+          <h3>Variables</h3>
+          <p>Tempo: The speed at which a passage of music is or should be played.</p>
+          <p>Speechiness: It detects the presence of spoken words in a track</p>
+          <p>Popularity: The state or condition of being liked, admired, or supported by many people.</p>
+          <p>Loudness is The subjective perception of sound pressure.</p>
+          <p>Instrumentalness : The quality or condition of being instrumental</p>
+          <p>Popularity: the state or condition of being liked, admired, or supported by many people.</p>
         </div>
         <div class="col-md-6" id="hbar" style="height: 500px"></div>
         <div class="col-md-3" id="stackBar" style="height: 500px"></div>
